fix(batch): address review feedback on limits, uncaught exceptions, and output slices